# ChangeLog for x11-base/xfree-drm
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree-drm/ChangeLog,v 1.58 2004/02/21 23:21:51 spyderous Exp $

  21 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r7.ebuild:
  PATCH_VER 0.4. Add 210_ppc_mach64-drm-ioremap-agp.patch, made by David Holm
  <dholm@gentoo.org> on bug #40314. Also contains a remade
  010_ppc_drm-ioremap-agp.patch, again thanks to David. Change numbering of
  patches also.

  21 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r7.ebuild:
  Start using new patch_exclude() from xfree.eclass for patch exclusion.

  21 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r7.ebuild:
  Cleanup, mostly comments and quotes.

  15 Feb 2004; David Holm <dholm@gentoo.org> xfree-drm-4.3.0-r7.ebuild:
  Fixed broken ioremap patch and added to ~ppc.

  10 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r7.ebuild:
  Fixing for ppc mach64 -- ioremap patch is broken. Trying without it for now to
  see whether things work. David Holm <dholm@gentoo.org> reports it works with
  forced PCI mode.

  09 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r7.ebuild:
  Adding warning about insecurity of mach64.

  09 Feb 2004; Aron Griffis <agriffis@gentoo.org> xfree-drm-4.3.0-r7.ebuild:
  Add ~alpha and ~ia64. matrox, i810 and i830 fail to build on alpha, but I'll
  wait for that to be an issue for somebody before trying to fix it

  08 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r6.ebuild:
  Use portage internal USE_EXPAND instead of xfree.eclass vcards(), add
  IUSE_VIDEO_CARDS line.

  23 Jan 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xfree-drm-4.3.0-r7.ebuild:
  Marking stable on x86. It's been in testing for a month and a half without a
  whisper. Keep in mind that the gatos USE flag only works in combination with