@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/xfree-drm
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree-drm/ChangeLog,v 1.58 2004/02/21 23:21:51 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree-drm/ChangeLog,v 1.59 2004/02/21 23:32:51 spyderous Exp $
+
+  21 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
+  xfree-drm-4.3.0-r7.ebuild:
+  Move einfo for patch exclusion from xfree eclass to ebuild.
 
   21 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>;
   xfree-drm-4.3.0-r7.ebuild:
